fixed some issues in and id duplicated we changed to class

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2478,7 +2478,7 @@ a {
     font-size: 0.6em;
   }
 
-  .micro-grav > .micro-grav2 > #hours-3{
+  .micro-grav > .micro-grav2 > .hours-3{
     font-size: 0.6em;
   }
 
