--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -61,13 +61,13 @@ a {
 .left-list {
   display: grid;
   grid-template-columns: repeat(6, auto);
-  width: 500px;
+  width: 50vw;
 }
 
 .right-list {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  width: 300px;
+  width: 30vw;
 }
 
 .event-list,
@@ -79,10 +79,6 @@ a {
 .biz-drop:hover > .bizlist {
   background-color: black;
   display: block;
-}
-
-#neural {
-  margin-right: 80px;
 }
 
 .event-list a:hover {
@@ -115,6 +111,7 @@ a {
 
 .white-nav {
   height: 40px;
+  width: 100vw;
 }
 
 .svg-inline--fa.fa-search.fa-w-16 {
@@ -132,13 +129,13 @@ a {
 }
 
 .white-nav-img {
-  height: 30px;
-  width: 205px;
+  height: 3vh;
+  width: 20.5vw;
 }
 
 #date {
   color: #e04141;
-  font-size: 20px;
+  font-size: 2em;
   font-weight: 700;
 }
 
@@ -146,12 +143,12 @@ a {
   background-color: #0cc;
   border-radius: 5px;
   border: 0;
-  color: #d6cdcd;
-  font-size: 12px;
+  color: #FFFFFF;
+  font-size: 0.7em;
   font-weight: 700;
-  height: 15px;
+  height: 1vh;
   padding: 10px;
-  width: 145px;
+  width: 9vw;
 }
 
 #fund-round {
@@ -182,7 +179,7 @@ a {
 
 #one-img {
   height: auto;
-  width: 100%;
+  width: 100vw;
 }
 
 .yellow a {
@@ -197,169 +194,60 @@ a {
 .yellow {
   background-color: #fd3;
   height: 30px;
-  width: 100%;
+  width: 100vw;
 }
 
-.bio-tnw {
+.main-grid-container {
+  margin: 81px auto 0 auto;
   display: grid;
-  grid-template-columns: minmax(0, 2fr) minmax(0, 1fr);
-  padding-left: 10px;
-  position: relative;
-  top: 90px;
+  height: 100%;
+  grid-template-rows: repeat(3, minmax(100px, 1fr));
+  grid-template-columns: 100%;
+  grid-gap: 10px;
+  width: 98%;
+}
+
+.main-grid-container img {
+  height: 100%;
   width: 100%;
 }
 
-.right-art {
-  display: grid;
-  grid-template-rows: repeat(2, auto);
-}
-
-.right-art-top {
-  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/05/Sprint_image.jpg");
-  background-size: cover;
-  grid-row: 1;
-  height: 40vh;
-  margin: 5px 5px 10px 10px;
+.main-grid-items {
   position: relative;
-  width: 100%;
 }
 
-.right-art-top::before {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
-  bottom: 0;
-  content: '';
-  left: 0;
+.tnw-logo-grid3 {
+  display: none;
+}
+
+.main-grid-text {
   position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
-}
-
-.right-art-top a {
-  color: #fff;
-  font-size: 30px;
-  left: 15px;
-  line-height: 30px;
-  position: relative;
-  text-decoration: none;
-  top: 70px;
-  z-index: 0;
-}
-
-.right-art-bottom {
-  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/06/bmw-ix3-all-electric-car-suv-sav-shift-evs-796x448.jpg");
-  background-size: cover;
-  grid-row: 2;
-  height: 40vh;
-  margin: 0 0 10px 10px;
-  position: relative;
-  width: 100%;
-}
-
-.right-art-bottom::before {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
   bottom: 0;
-  content: '';
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
+  color: white;
+  padding-top: 50px;
 }
 
-.right-art-bottom a {
-  color: #fff;
-  display: block;
-  font-size: 32px;
-  left: 10px;
-  line-height: 35px;
-  margin-left: 15px;
-  position: relative;
-  text-decoration: none;
-  top: 40px;
-  width: 300px;
-  z-index: 0;
+.main-grid-text * {
+  padding-left: 15px;
+  padding-bottom: 15px;
 }
 
-.left-art {
-  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/06/header-image-apple-own-arm-based-chips-796x417.png");
-  background-size: 100% 100%;
-  color: #fff;
-  display: grid;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  grid-template-rows: repeat(2, auto);
-  height: 81.7vh;
-  margin-top: 5px;
-  width: 100%;
-  z-index: 0;
-  position: relative;
+.main-grid-items h2 {
+  font-size: 20px;
 }
 
-.left-art::before {
-  content: '';
-  position: absolute;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgb(224, 108, 108) 95%);
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 0;
+.main-grid-text h3 {
+  font-size: 14px;
 }
 
-.left-art img {
-  bottom: 20px;
-  height: 200px;
-  padding: 20px;
-  position: relative;
-  width: 60%;
-  z-index: 0;
+.main-grid-text p {
+  font-size: 12px;
+  color: #aaa;
 }
 
-.left-art p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  height: 5px;
-  position: relative;
-  right: 50px;
-  text-align: right;
-  top: 25px;
-  z-index: 0;
-}
-
-.left-art h4 {
-  bottom: 30px;
-  font-size: 35px;
-  padding: 20px;
-  position: relative;
-  z-index: 0;
-}
-
-.div-callum {
-  bottom: 100px;
-  left: 50px;
-  position: relative;
-  width: 500px;
-}
-
-.left-art a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.left-art-top,
-.left-art-down {
-  height: 198px;
-  width: 100%;
-}
-
-.right-top-img {
-  height: 198px;
-  width: 100%;
-}
-
-.right-bottom-img {
-  width: 100%;
-  height: 198px;
+.parent-container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .eight-grids {
@@ -391,7 +279,8 @@ a {
 }
 
 .news-latest {
-  font-size: 40px;
+  font-size: 1em;
+  margin-left: 100px;
 }
 
 .img-clue a {
@@ -712,6 +601,7 @@ a {
   padding: 20px 0 10px 0;
 }
 
+
 .latest-div1 a {
   bottom: 25px;
   color: #f42;
@@ -1006,7 +896,8 @@ a {
 .fb-class {
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/05/Facebook-Discover-796x419.jpg");
   background-size: cover;
-  color: #fff;
+  background-position: center;
+  color: #FFFFFF;
   height: 276px;
   position: relative;
 }
@@ -1157,7 +1048,7 @@ a {
 .cont-main {
   display: grid;
   grid-template-rows: repeat(9, auto);
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
   width: 100%;
 }
 
@@ -1271,7 +1162,7 @@ a {
 
 /* Big Screen */
 
-@media screen and (max-width: 1440px) and (min-width: 768px) {
+@media screen and (max-width: 1440px) and (min-width: 1024px) {
   * {
     padding: 0;
     margin: 0;
@@ -1282,8 +1173,36 @@ a {
   }
 
   .top-nav {
-    width: 100%;
+    width: 100vw;
     z-index: 100;
+  }
+
+  .main-grid-container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    margin: 92px auto 0 auto;
+  }
+
+  .main-grid-item1 h2 {
+    font-size: 40px;
+  }
+
+  .main-grid-item1 {
+    grid-area: 1 / 1 / 3 / 3;
+    
+  }
+  .main-grid-item1{
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgb(224, 108, 108) 95%);
+  }
+
+  .main-grid-item2 {
+    grid-area: 1 / 3;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgb(224, 108, 108) 95%);
+  }
+
+  .main-grid-item3 {
+    grid-area: 2 / 3;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgb(224, 108, 108) 95%);
   }
 
   /*  GRIDS */
@@ -1414,8 +1333,8 @@ a {
   }
 
   #stub-para {
-    font-size: 30px;
-    width: 400px;
+    font-size: 1.5em;
+    width: 30vw;
   }
 
   #one-img {
@@ -1477,10 +1396,24 @@ a {
   }
 }
 
+@media screen and (max-width: 1300px) and (min-width: 1024px){
+
+  .button{
+    display: none;
+  }
+
+  #date{
+    display: none;
+  }
+
+  .right-white-list img{
+    display: none;
+  }
+}
 
 /* Medium Screen */
 
-@media screen and (max-width: 767px) and (min-width: 426px) {
+@media screen and (max-width: 1024px) and (min-width: 728px) {
   body {
     width: 100vw;
     padding: 0;
@@ -1537,162 +1470,6 @@ a {
   .tnwlog,
   .left-art-top {
     display: none;
-  }
-
-  .bio-tnw {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: repeat(3, minmax(110px, 1fr));
-    grid-template-columns: 100%;
-    width: 97%;
-  }
-
-  .right-art {
-    display: grid;
-    grid-template-rows: repeat(2, auto);
-    position: relative;
-    right: 10px;
-    z-index: 0;
-  }
-
-  .right-art-top {
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/05/Sprint_image.jpg");
-    background-size: cover;
-    grid-row: 1;
-  }
-
-  .right-art-top::before {
-    content: '';
-    position: absolute;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 0;
-  }
-
-  .right-art-top a {
-    color: hsl(0, 0%, 100%);
-    font-size: 1.7em;
-    left: 10px;
-    position: relative;
-    top: 160px;
-    line-height: 30px;
-    text-decoration: none;
-    z-index: 0;
-  }
-
-  .right-art-bottom {
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/06/bmw-ix3-all-electric-car-suv-sav-shift-evs-796x448.jpg");
-    background-size: cover;
-    grid-row: 2;
-    height: 40.7vh;
-    margin: 0 0 10px 10px;
-    position: relative;
-    width: 100%;
-  }
-
-  .right-art-bottom::before {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
-    bottom: 0;
-    content: '';
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 0;
-  }
-
-  .right-art-bottom a {
-    color: #fff;
-    display: block;
-    font-size: 1.8em;
-    line-height: 30px;
-    position: relative;
-    text-decoration: none;
-    top: 170px;
-    width: 90%;
-    z-index: 0;
-  }
-
-  .left-art {
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/06/header-image-apple-own-arm-based-chips-796x417.png");
-    background-size: 100% 100%;
-    background-size: cover;
-    color: #fff;
-    display: grid;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    grid-template-rows: repeat(2, auto);
-    height: auto;
-    width: 100%;
-    height: 290px;
-    z-index: 0;
-  }
-
-  .div-callum {
-    position: relative;
-    bottom: 20px;
-  }
-
-  .left-art::before {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgb(224, 108, 108) 95%);
-    bottom: 0;
-    content: '';
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 0;
-  }
-
-  .left-art img {
-    bottom: 20px;
-    height: 200px;
-    padding: 20px;
-    position: relative;
-    width: 60%;
-    z-index: 0;
-  }
-
-  .left-art p {
-    height: 5px;
-    position: relative;
-    right: 50px;
-    text-align: right;
-    top: 30px;
-    z-index: 0;
-  }
-
-  .left-art h4 {
-    font-size: 22px;
-    margin-top: 120px;
-  }
-
-  .div-callum {
-    position: relative;
-    left: 20px;
-  }
-
-  .left-art a {
-    text-decoration: none;
-    color: #fff;
-  }
-
-  .left-art-top,
-  .left-art-down {
-    height: 198px;
-    width: 100%;
-  }
-
-  .right-top-img {
-    height: 198px;
-    width: 100%;
-  }
-
-  .right-bottom-img {
-    height: 198px;
-    width: 100%;
   }
 
   .div-extra {
@@ -1756,7 +1533,7 @@ a {
 
   .funding-grid-container {
     display: grid;
-    width: 95%;
+    width: 98vw;
     margin: 0 auto;
     gap: 20px;
     grid-template-rows: repeat(4, auto);
@@ -1839,7 +1616,7 @@ a {
   }
 
   .eight-grids {
-    margin: 300px 0 100px 0;
+    margin: 120px 0 100px 0;
     z-index: 0;
   }
 
@@ -2114,7 +1891,7 @@ a {
 
 
 /* Small Screen */
-@media screen and (max-width: 425px) and (min-width: 326px) {
+@media screen and (max-width: 728px) and (min-width: 468px) {
   body {
     width: 100vw;
     padding: 0;
@@ -2160,6 +1937,7 @@ a {
   .yellow-bar {
     background-color: #fd3;
     height: 40px;
+    width: 100vw;
   }
 
   .yellow-bar h4 {
@@ -2171,190 +1949,6 @@ a {
   .tnwlog,
   .left-art-top {
     display: none;
-  }
-
-  .bio-tnw {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: repeat(3, minmax(110px, 1fr));
-    grid-template-columns: 100%;
-    width: 80%;
-  }
-
-  .right-art {
-    display: grid;
-    grid-template-rows: repeat(2, auto);
-    position: relative;
-    right: 10px;
-    z-index: 0;
-  }
-
-  .right-art-top h4 {
-    font-size: 1em;
-    margin: 120px 2px 0 0;
-    padding: 0 45px 0 5px;
-  }
-
-  .right-art-top {
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/05/Sprint_image.jpg");
-    background-size: cover;
-    grid-row: 1;
-    height: 217px;
-  }
-
-  .right-art-top::before {
-    content: '';
-    position: absolute;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 0;
-  }
-
-  .right-art-top a {
-    color: #fff;
-    font-size: 1.3em;
-    left: 10px;
-    position: relative;
-    top: 130px;
-    text-decoration: none;
-    z-index: 0;
-  }
-
-  .right-art-bottom {
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/06/bmw-ix3-all-electric-car-suv-sav-shift-evs-796x448.jpg");
-    background-size: cover;
-    grid-row: 2;
-    height: 217px;
-    margin: 0 0 10px 10px;
-    position: relative;
-    width: 100%;
-  }
-
-  .right-art-bottom::before {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
-    bottom: 0;
-    content: '';
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 0;
-  }
-
-  .right-art-bottom a {
-    color: #fff;
-    display: block;
-    font-size: 20px;
-    line-height: 25px;
-    position: relative;
-    text-decoration: none;
-    top: 150px;
-    width: 95%;
-    z-index: 0;
-  }
-
-  .left-art {
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/06/header-image-apple-own-arm-based-chips-796x417.png");
-    background-size: 100% 100%;
-    background-size: cover;
-    color: #fff;
-    display: grid;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    grid-template-rows: repeat(2, auto);
-    height: auto;
-    width: 100%;
-    z-index: 0;
-  }
-
-  .div-callum {
-    position: relative;
-    bottom: 20px;
-  }
-
-  .left-art::before {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgb(224, 108, 108) 95%);
-    bottom: 0;
-    content: '';
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 0;
-  }
-
-  .left-art img {
-    bottom: 20px;
-    height: 200px;
-    padding: 20px;
-    position: relative;
-    width: 60%;
-    z-index: 0;
-  }
-
-  .left-art p {
-    height: 5px;
-    position: relative;
-    right: 50px;
-    text-align: right;
-    top: 30px;
-    z-index: 0;
-  }
-
-  .info a {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-    margin-bottom: 20px;
-  }
-
-  .info a:hover {
-    color: #383838;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-  }
-
-  .left-art h4 {
-    font-size: 1em;
-    margin: 120px 20px 0 0;
-    padding: 0 45px 0 5px;
-  }
-
-  .div-callum {
-    position: relative;
-    left: 20px;
-  }
-
-  .left-art a {
-    text-decoration: none;
-    color: #fff;
-  }
-
-  .left-art-top,
-  .left-art-down {
-    height: 198px;
-    width: 100%;
-  }
-
-  .right-top-img {
-    height: 198px;
-    width: 100%;
-  }
-
-  .right-bottom-img {
-    height: 198px;
-    width: 100%;
-  }
-
-  .div-extra {
-    justify-self: start;
-    margin-top: 20px;
-    padding-left: 20px;
-    width: 200px;
   }
 
   .latest-div1 h4,
@@ -2672,7 +2266,7 @@ a {
     overflow-x: hidden;
     padding: 0 20px 0 20px;
     position: relative;
-    width: 78%;
+    width: 95vw;
   }
 
   .info1 {
@@ -2786,3 +2380,4 @@ a {
   }
 }
 
+/*1440, 1024, 728 and maybe 468*/
