--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -72,28 +72,8 @@ a {
 
 .event-list,
 .bizlist {
-  display: none;
-}
-
-.event-drop:hover > .event-list,
-.biz-drop:hover > .bizlist {
-  background-color: black;
-  display: block;
-}
-
-.event-list a:hover {
-  border: 1px solid #918888;
-  color: #fff;
-}
-
-.bizlist a:hover {
-  border: 1px solid #8b8080;
-  color: #d8cdcd;
-}
-
-.event-list,
-.bizlist {
   position: absolute;
+  display: none;
 }
 
 .white-nav,
@@ -124,10 +104,6 @@ a {
   width: 20px;
 }
 
-.left-white-list #latest-d {
-  margin: 0;
-}
-
 .white-nav-img {
   height: 3vh;
   width: 20.5vw;
@@ -143,7 +119,7 @@ a {
   background-color: #0cc;
   border-radius: 5px;
   border: 0;
-  color: #FFFFFF;
+  color: #fff;
   font-size: 0.7em;
   font-weight: 700;
   height: 1vh;
@@ -151,16 +127,8 @@ a {
   width: 9vw;
 }
 
-#fund-round {
-  font-size: 30px;
-}
-
 .funding-list li {
   font-size: 18px;
-}
-
-.white-nav .button:hover {
-  background-color: #500d50;
 }
 
 .right-white-list {
@@ -175,11 +143,8 @@ a {
   gap: 25px;
   margin-left: 50px;
   margin-right: 50px;
-}
-
-#one-img {
-  height: auto;
-  width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
 }
 
 .yellow a {
@@ -262,13 +227,6 @@ a {
   text-decoration: none;
 }
 
-.info a:hover {
-  color: #000;
-  font-size: 25px;
-  font-weight: 700;
-  text-decoration: none;
-}
-
 .info-txt-div {
   padding-right: 20px;
   width: 370px;
@@ -288,11 +246,6 @@ a {
   font-size: 16px;
   text-justify: auto;
   word-wrap: break-word;
-}
-
-#latest-d {
-  font-size: 40px;
-  margin-left: 0;
 }
 
 .top-img-div {
@@ -320,6 +273,8 @@ a {
   display: grid;
   grid-template-rows: repeat(2, auto);
   width: 100vw;
+  background-color: #1f1d1d;
+  height: 100px;
 }
 
 .funding {
@@ -342,14 +297,6 @@ a {
 
 .red h4 {
   width: 270px;
-}
-
-#fund-round {
-  margin-left: 60px;
-}
-
-#latest-d {
-  margin-left: 10px;
 }
 
 .funding img {
@@ -402,22 +349,12 @@ a {
   z-index: 0;
 }
 
-.reddit-div::before {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 1) 95%);
-  bottom: 0;
-  content: '';
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
-}
-
 .reddit-div h2 {
   left: 20px;
   position: relative;
   top: 120px;
   z-index: 0;
+  color: #fff;
 }
 
 .reddit-div a {
@@ -426,6 +363,7 @@ a {
   left: 20px;
   font-size: 14px;
   z-index: 0;
+  color: #fff;
 }
 
 .reddit-div small {
@@ -433,17 +371,6 @@ a {
   top: 40px;
   left: 20px;
   z-index: 0;
-}
-
-.reddit-div a {
-  color: #fff;
-}
-
-.reddit-div h2 {
-  color: #fff;
-}
-
-.reddit-div small {
   color: #fff;
 }
 
@@ -601,7 +528,6 @@ a {
   padding: 20px 0 10px 0;
 }
 
-
 .latest-div1 a {
   bottom: 25px;
   color: #f42;
@@ -695,17 +621,6 @@ a {
   height: 276px;
   position: relative;
   width: 360px;
-}
-
-.simpson::before {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
-  bottom: 0;
-  content: '';
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
 }
 
 .simpson a {
@@ -897,7 +812,7 @@ a {
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/05/Facebook-Discover-796x419.jpg");
   background-size: cover;
   background-position: center;
-  color: #FFFFFF;
+  color: #fff;
   height: 276px;
   position: relative;
 }
@@ -999,17 +914,6 @@ a {
   display: grid;
 }
 
-#latest-d a {
-  position: relative;
-  margin-top: 50px;
-  top: 30px;
-}
-
-.funding-img-cont {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-}
-
 .funding-img-cont img {
   height: 80px;
   width: 80px;
@@ -1038,7 +942,6 @@ a {
 }
 
 .top-img-caps,
-.img-clue,
 .next-img-cap,
 .img-clue {
   height: 100px;
@@ -1048,7 +951,8 @@ a {
 .cont-main {
   display: grid;
   grid-template-rows: repeat(9, auto);
-  /*overflow-x: hidden;*/
+
+  /* overflow-x: hidden; */
   width: 100%;
 }
 
@@ -1135,11 +1039,6 @@ a {
   width: 30px;
 }
 
-.footer-up-div {
-  background-color: #1f1d1d;
-  height: 100px;
-}
-
 .footer-down-div {
   background-color: #070707;
   height: 80px;
@@ -1188,11 +1087,8 @@ a {
   }
 
   .main-grid-item1 {
-    grid-area: 1 / 1 / 3 / 3;
-    
-  }
-  .main-grid-item1{
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgb(224, 108, 108) 95%);
+    grid-area: 1 / 1 / 3 / 3;
   }
 
   .main-grid-item2 {
@@ -1210,6 +1106,7 @@ a {
     display: grid;
     grid-template-columns: repeat(4, minmax(auto, 1fr));
     grid-template-rows: repeat(2, minmax(auto, 1fr));
+    margin: 0;
     width: 95%;
   }
 
@@ -1226,21 +1123,6 @@ a {
     margin: 100px auto;
   }
 
-  .info a {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-    margin-bottom: 20px;
-  }
-
-  .info a:hover {
-    color: #383838;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-  }
-
   .info {
     margin: 40px 0 30px 0;
   }
@@ -1248,11 +1130,6 @@ a {
   .micro-grav img {
     width: 270px;
     height: auto;
-  }
-
-  .top-img-div {
-    margin: 0;
-    display: grid;
   }
 
   .micro-grav {
@@ -1276,7 +1153,6 @@ a {
   .funding-grid-items {
     position: relative;
   }
-
 
   .orange p,
   .lightorange p {
@@ -1346,44 +1222,8 @@ a {
     margin-top: 100px;
   }
 
-  .latest-div1 a {
-    bottom: 0;
-  }
-
-  .apps-anch a {
-    font-size: 14px;
-  }
-
   .eight-grids1 {
     margin: 50px 180px;
-  }
-
-  .info1 {
-    margin: 20px 20px 20px 0;
-    color: #f42;
-  }
-
-  .info1 a {
-    color: #f42;
-  }
-
-  .info0 {
-    margin-bottom: 30px;
-  }
-
-  .info0 a {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-    margin-bottom: 20px;
-  }
-
-  .info0 a:hover {
-    color: #141414;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
   }
 
   .deals-cont img {
@@ -1394,19 +1234,69 @@ a {
   .deals-cont {
     padding: 0;
   }
+
+  .info1 {
+    margin: 20px 20px 20px 0;
+    color: #f42;
+  }
+
+  .info0 {
+    margin-bottom: 30px;
+  }
+
+  /* .info0 a:hover {
+    color: #141414;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+
+  .info a:hover {
+    color: #383838;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: none;
+  } */
+
+  .info0 a {
+    color: #f42;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-bottom: 20px;
+  }
+
+  .info1 a {
+    color: #f42;
+  }
+
+  .info a {
+    color: #f42;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-bottom: 20px;
+  }
+
+  .latest-div1 a {
+    bottom: 0;
+  }
+
+  .apps-anch a {
+    font-size: 14px;
+  }
 }
 
-@media screen and (max-width: 1300px) and (min-width: 1024px){
-
-  .button{
+@media screen and (max-width: 1300px) and (min-width: 1024px) {
+  .button {
     display: none;
   }
 
-  #date{
+  #date {
     display: none;
   }
 
-  .right-white-list img{
+  .right-white-list img {
     display: none;
   }
 }
@@ -1429,9 +1319,6 @@ a {
     position: fixed;
     width: 100vw;
     z-index: 1;
-  }
-
-  .small-header {
     display: grid;
     grid-template-rows: repeat(2, auto);
   }
@@ -1508,27 +1395,8 @@ a {
     line-height: 2em;
   }
 
-  .info a {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-    margin-bottom: 20px;
-  }
-
-  .info a:hover {
-    color: #383838;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-  }
-
   .funding-title {
     font-size: 28px;
-  }
-
-  .funding-list {
-    font-size: 14px;
   }
 
   .funding-grid-container {
@@ -1537,6 +1405,7 @@ a {
     margin: 0 auto;
     gap: 20px;
     grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(1, auto);
   }
 
   .funding-grid-items {
@@ -1604,10 +1473,7 @@ a {
     display: inline;
     font-size: 16px;
     padding: 0 8px;
-  }
-
-  .funding-grid-container {
-    grid-template-columns: repeat(1, auto);
+    padding: 5px;
   }
 
   #sec-4-eight {
@@ -1625,41 +1491,11 @@ a {
     z-index: 0;
   }
 
-  .top-img-div > .deals-cont img {
-    height: 80px;
-    width: 119px;
-    float: left;
-    margin-right: 17px;
-  }
-
-  .top-img-div > .deals-cont a {
-    color: rgb(75, 75, 75);
-  }
-
   .top-img-div {
     display: grid;
     width: 95%;
     gap: 14px;
     margin: 80px auto 60px auto;
-  }
-
-  .top-img-div > .micro-grav img {
-    height: 80px;
-    width: 119px;
-    float: left;
-    margin-right: 17px;
-  }
-
-  .micro-grav,
-  .deals-cont {
-    width: 100%;
-    height: 80px;
-    margin-bottom: 40px;
-  }
-
-  .funding-img-cont img {
-    height: 80px;
-    width: 80px;
   }
 
   .news-latest {
@@ -1678,20 +1514,6 @@ a {
     width: 350px;
   }
 
-  .funding {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-
-  .apps {
-    display: grid;
-    grid-template-rows: repeat(8, minmax(auto, 1fr));
-    width: 98%;
-    margin: 0;
-    gap: 20px;
-  }
-
   .apps small {
     font-size: 21px;
   }
@@ -1705,39 +1527,19 @@ a {
     width: 500px;
   }
 
-  .apps-anch a {
-    font-size: 14px;
-    color: rgb(97, 97, 97);
-  }
-
-  #apps-h1 h4,
-  #apps-h2 h4,
-  #apps-h3 h4,
-  #apps-h4 h4,
-  #apps-h5 h4 {
-    font-size: 20px;
-    position: relative;
-    right: 40px;
-  }
-
   .funding-list {
     display: grid;
     grid-template-columns: 1fr;
-  }
-
-  .funding-nav ul {
-    bottom: 40px;
-  }
-
-  .funding-list li {
-    font-size: 30px;
-    padding: 5px;
+    font-size: 14px;
   }
 
   .funding {
     bottom: 130px;
     position: relative;
     height: 80px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
   }
 
   .funding-nav ul {
@@ -1746,23 +1548,7 @@ a {
     font-size: 12px;
     line-height: 10px;
     list-style: none;
-  }
-
-  .funding-list a {
-    font-size: 14px;
-  }
-
-  #fund-round {
-    font-size: 30px;
-    margin-left: 40px;
-    padding: 5px;
-    position: relative;
-    top: 80px;
-  }
-
-  .funding-img-cont {
-    bottom: 80px;
-    position: relative;
+    bottom: 40px;
   }
 
   .one {
@@ -1777,6 +1563,7 @@ a {
     margin: 0;
     overflow-x: hidden;
     width: 97%;
+    position: relative;
   }
 
   .apps {
@@ -1795,25 +1582,6 @@ a {
     color: #f42;
   }
 
-  .info1 a {
-    color: #f42;
-  }
-
-  .info0 a {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-    margin-bottom: 20px;
-  }
-
-  .info0 a:hover {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-  }
-
   .footer-down-div {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
@@ -1829,9 +1597,16 @@ a {
   }
 
   #one-img {
-    height: 500px;
     padding: 0;
-    width: 100%;
+    width: 98%;
+    height: auto;
+    padding-bottom: 20px;
+  }
+
+  .fb-class h2,
+  .fb-class h4 {
+    top: 30px;
+    width: 500px;
   }
 
   .info-txt-div,
@@ -1854,29 +1629,8 @@ a {
     width: 100%;
   }
 
-  .reddit-div h4 {
-    width: 500px;
-  }
-
   .div-4-eight {
     padding-right: 50px;
-  }
-
-  .fb-class h2,
-  .fb-class h4,
-  #apps-h1 h4,
-  #apps-h2 h4,
-  #apps-h3 h4,
-  #apps-h4 h4,
-  #apps-h5 h4 {
-    top: 30px;
-    width: 500px;
-  }
-
-  #one-img {
-    width: 98%;
-    height: auto;
-    padding-bottom: 20px;
   }
 
   .footer-up-div {
@@ -1887,7 +1641,71 @@ a {
     display: grid;
     grid-template-columns: repeat(5, auto);
   }
+
+  .funding-img-cont img {
+    height: 80px;
+    width: 80px;
+  }
+
+  .info0 a {
+    color: #f42;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-bottom: 20px;
+  }
+
+  .info a {
+    color: #f42;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-bottom: 20px;
+  }
+
+  .top-img-div > .deals-cont img {
+    height: 80px;
+    width: 119px;
+    float: left;
+    margin-right: 17px;
+  }
+
+  .top-img-div > .micro-grav img {
+    height: 80px;
+    width: 119px;
+    float: left;
+    margin-right: 17px;
+  }
+
+  .micro-grav,
+  .deals-cont {
+    width: 100%;
+    height: 80px;
+    margin-bottom: 40px;
+  }
+
+  .reddit-div h4 {
+    width: 500px;
+  }
+
+  .info1 a {
+    color: #f42;
+  }
+
+  .apps-anch a {
+    font-size: 14px;
+    color: rgb(97, 97, 97);
+  }
+
+  .funding-list a {
+    font-size: 14px;
+  }
+
+  .top-img-div > .deals-cont a {
+    color: rgb(75, 75, 75);
+  }
 }
+
 
 
 /* Small Screen */
@@ -1897,21 +1715,25 @@ a {
     padding: 0;
   }
 
+  .top-img-div > .micro-grav img {
+    height: 80px;
+    width: 119px;
+    float: left;
+    margin-right: 10px;
+  }
+
   .top-header {
     display: none;
   }
 
   .small-header {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
     background-color: #fff;
     overflow-x: hidden;
     position: fixed;
     width: 100vw;
     z-index: 1;
-  }
-
-  .small-header {
-    display: grid;
-    grid-template-rows: repeat(2, auto);
   }
 
   .small-top-bar {
@@ -1984,16 +1806,13 @@ a {
     font-size: 28px;
   }
 
-  .funding-list {
-    font-size: 14px;
-  }
-
   .funding-grid-container {
     display: grid;
     width: 95%;
     margin: 0 auto;
     gap: 20px;
     grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(1, auto);
   }
 
   .funding-grid-items {
@@ -2057,16 +1876,6 @@ a {
     display: none;
   }
 
-  .funding-list li {
-    display: inline;
-    font-size: 16px;
-    padding: 0 8px;
-  }
-
-  .funding-grid-container {
-    grid-template-columns: repeat(1, auto);
-  }
-
   #sec-4-eight {
     bottom: 150px;
     margin-top: 0;
@@ -2084,26 +1893,11 @@ a {
     width: 80%;
   }
 
-  .top-img-div > .deals-cont img {
-    height: 80px;
-    width: 119px;
-    float: left;
-    margin-right: 17px;
-  }
-
-  .top-img-div > .deals-cont a {
-    color: rgb(75, 75, 75);
-  }
-
   .top-img-div {
     display: grid;
     width: 95%;
     gap: 14px;
     margin: 30px auto 60px auto;
-  }
-
-  .micro-grav > .micro-grav2 h4 {
-    font-size: 0.8em;
   }
 
   .micro-grav > .micro-grav2 > .cosmic-op {
@@ -2114,22 +1908,10 @@ a {
     font-size: 0.6em;
   }
 
-  .top-img-div > .micro-grav img {
-    height: 80px;
-    width: 119px;
-    float: left;
-    margin-right: 10px;
-  }
-
   .micro-grav,
   .deals-cont {
     width: 100%;
     height: 80px;
-  }
-
-  .funding-img-cont img {
-    height: 80px;
-    width: 80px;
   }
 
   .news-latest {
@@ -2143,25 +1925,10 @@ a {
     width: 350px;
   }
 
-  .top-img-div img {
+  /* .top-img-div img {
     height: 310px;
     width: 350px;
-  }
-
-
-  .funding {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-
-  .apps {
-    display: grid;
-    grid-template-rows: repeat(8, minmax(auto, 1fr));
-    width: 98%;
-    margin: 0;
-    gap: 20px;
-  }
+  } */
 
   .apps small {
     font-size: 21px;
@@ -2176,42 +1943,32 @@ a {
     width: 500px;
   }
 
-  .apps-anch a {
-    font-size: 14px;
-    color: rgb(97, 97, 97);
-  }
-
-  #apps-h1 h4,
-  #apps-h2 h4,
-  #apps-h3 h4,
-  #apps-h4 h4,
-  #apps-h5 h4 {
-    font-size: 20px;
-    position: relative;
-    right: 40px;
-  }
-
   .funding-list {
     display: grid;
     grid-template-columns: 1fr;
     left: 40px;
     margin-left: 40px;
-  }
-
-  .funding-nav ul {
-    bottom: 40px;
+    font-size: 14px;
   }
 
   .funding-list li {
-    font-size: 30px;
-    padding: 5px;
+    display: inline;
+    font-size: 16px;
+    padding: 0 8px;
   }
 
   .funding {
     bottom: 130px;
     position: relative;
     height: 80px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
   }
+
+  /* .micro-grav > .micro-grav2 h4 {
+    font-size: 0.8em;
+  } */
 
   .funding-nav ul {
     color: #f42;
@@ -2219,27 +1976,7 @@ a {
     font-size: 12px;
     line-height: 10px;
     list-style: none;
-  }
-
-  .funding-list a {
-    font-size: 14px;
-  }
-
-  .funding-list {
-    margin-left: 0;
-  }
-
-  #fund-round {
-    font-size: 30px;
-    margin-left: 40px;
-    padding: 5px;
-    position: relative;
-    top: 80px;
-  }
-
-  .funding-img-cont {
-    bottom: 80px;
-    position: relative;
+    bottom: 40px;
   }
 
   .one {
@@ -2267,6 +2004,8 @@ a {
     padding: 0 20px 0 20px;
     position: relative;
     width: 95vw;
+    grid-template-rows: repeat(8, minmax(auto, 1fr));
+    gap: 20px;
   }
 
   .info1 {
@@ -2286,11 +2025,16 @@ a {
     margin-bottom: 20px;
   }
 
-  .info0 a:hover {
+  /* .info0 a:hover {
     color: #f42;
     font-size: 25px;
     font-weight: 700;
     text-decoration: none;
+  } */
+
+  .apps-anch a {
+    font-size: 14px;
+    color: rgb(97, 97, 97);
   }
 
   .footer-down-div {
@@ -2333,37 +2077,8 @@ a {
     width: 100%;
   }
 
-  .reddit-div h4 {
-    width: 90%;
-  }
-
-  .simpson h4 {
-    width: 90%;
-  }
-
-  .insight h4 {
-    width: 90%;
-  }
-
   .div-4-eight {
     padding-right: 50px;
-  }
-
-  .fb-class h2,
-  .fb-class h4,
-  #apps-h1 h4,
-  #apps-h2 h4,
-  #apps-h3 h4,
-  #apps-h4 h4,
-  #apps-h5 h4 {
-    top: 30px;
-    font-size: 1em;
-  }
-
-  #one-img {
-    width: 98%;
-    height: auto;
-    padding-bottom: 20px;
   }
 
   .footer-up-div {
@@ -2378,6 +2093,106 @@ a {
   .icon-cont li {
     padding: 7px;
   }
+
+  .top-img-div > .deals-cont img {
+    height: 80px;
+    width: 119px;
+    float: left;
+    margin-right: 17px;
+  }
+
+  /* .top-img-div > .deals-cont a {
+    color: rgb(75, 75, 75);
+  } */
+
+  .simpson h4 {
+    width: 90%;
+  }
+
+  .insight h4 {
+    width: 90%;
+  }
+
+  .reddit-div h4 {
+    width: 90%;
+  }
+
+  .fb-class h2,
+  .fb-class h4 {
+    top: 30px;
+    font-size: 1em;
+  }
+
+  .funding-list a {
+    font-size: 14px;
+  }
 }
 
-/*1440, 1024, 728 and maybe 468*/
+.simpson::before {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 95%);
+  bottom: 0;
+  content: '';
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 0;
+}
+
+.reddit-div::before {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 1) 95%);
+  bottom: 0;
+  content: '';
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 0;
+}
+
+.white-nav .button:hover {
+  background-color: #500d50;
+}
+
+.event-drop:hover > .event-list,
+.biz-drop:hover > .bizlist {
+  background-color: black;
+  display: block;
+}
+
+.event-list a:hover {
+  border: 1px solid #918888;
+  color: #fff;
+}
+
+.bizlist a:hover {
+  border: 1px solid #8b8080;
+  color: #d8cdcd;
+}
+
+.info a:hover {
+  color: #383838;
+  font-size: 25px;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.info0 a:hover {
+  color: #f42;
+  font-size: 25px;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+#latest-d {
+  margin-left: 10px;
+  font-size: 40px;
+}
+
+#latest-d a {
+  position: relative;
+  margin-top: 50px;
+  top: 30px;
+}
+
+/* 1440, 1024, 728 and maybe 468 */
