--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -562,7 +562,7 @@ a {
 }
 
 .micro-grav2 h4 {
-  font-size: 20px;
+  font-size: 1em;
   color: #000;
 }
 
@@ -1502,6 +1502,7 @@ a {
     color: #f42;
     font-size: 28px;
     font-weight: 700;
+    margin: 0;
   }
 
   .red {
@@ -1901,11 +1902,11 @@ a {
   }
 
   .micro-grav > .micro-grav2 > .cosmic-op {
-    font-size: 0.6em;
+    font-size: 0.7em;
   }
 
   .micro-grav > .micro-grav2 > .hours-3 {
-    font-size: 0.6em;
+    font-size: 0.7em;
   }
 
   .micro-grav,
@@ -1916,19 +1917,15 @@ a {
 
   .news-latest {
     color: #f42;
-    font-size: 28px;
+    font-size: 1em;
     font-weight: 700;
+    margin: 0;
   }
 
   .red {
     height: 500px;
     width: 350px;
   }
-
-  /* .top-img-div img {
-    height: 310px;
-    width: 350px;
-  } */
 
   .apps small {
     font-size: 21px;
@@ -1966,15 +1963,12 @@ a {
     flex-wrap: nowrap;
   }
 
-  /* .micro-grav > .micro-grav2 h4 {
-    font-size: 0.8em;
-  } */
-
   .funding-nav ul {
     color: #f42;
     display: grid;
     font-size: 12px;
-    line-height: 10px;
+    line-height: 15px;
+    margin: 0;
     list-style: none;
     bottom: 40px;
   }
@@ -1988,10 +1982,10 @@ a {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    margin: 0;
+    margin: 5%;
     overflow-x: hidden;
     position: relative;
-    width: 82%;
+    width: 85vw;
   }
 
   .apps {
@@ -2024,13 +2018,6 @@ a {
     text-decoration: none;
     margin-bottom: 20px;
   }
-
-  /* .info0 a:hover {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-  } */
 
   .apps-anch a {
     font-size: 14px;
@@ -2101,10 +2088,6 @@ a {
     margin-right: 17px;
   }
 
-  /* .top-img-div > .deals-cont a {
-    color: rgb(75, 75, 75);
-  } */
-
   .simpson h4 {
     width: 90%;
   }
@@ -2125,6 +2108,14 @@ a {
 
   .funding-list a {
     font-size: 14px;
+  }
+
+  .info a {
+    color: #f42;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-bottom: 20px;
   }
 }
 
